# bit-quanx

./: .gitignore  CLAUDE.md  README.md  audit_duration.js  bit_boxjs.json  bit_cookie.js  bit_monitor.js  bit_my_activities.js  bit_rewrite.snippet  bit_signin.js  bit_signup.js  bit_task.json  boxjs.json  card_cookie.js  card_rewrite.snippet  dekt_clean_blacklist.js  dekt_cookie.js  dekt_monitor.js  dekt_my_activities.js  dekt_rewrite.snippet  dekt_signin.js  dekt_signup.js  dekt_unenroll.js  local_dekt_get_qr.js  local_dekt_monitor.js  local_dekt_my_activities.js  local_dekt_unenroll.js  local_env.js  local_sync_gist.js  package.json  pyproject.toml  script.js  task.json  unpack_capture.py
.github/: copilot-instructions.md
.github/workflows/: build-dekt-gui-windows.yml  ci-python.yml  package-gui.yml
dekt_backend/: .env.example  README.md  __init__.py  filtering.py  local_smoke.py  main.py  models.py  qrcode_utils.py  requirements.txt  runtime.py  security.py  settings.py  storage.py
dekt_backend/routes/: auth.py  config.py  courses.py  runtime.py
dekt_backend/tests/: test_auth_security.py  test_courses_routes.py  test_filtering.py  test_main.py  (+2 more)
dekt_gui_app/: README.md  build_windows.bat  debug_raw_api.py  main.py  requirements.txt
scripts/: audit_duration.js  card_balance.js  dekt_clean_blacklist.js  dekt_my_activities.js  dekt_signin.js  dekt_signup.js  local_card_gist_check.js  local_card_probe.js  local_dekt_api_probe.js  local_dekt_my_activities.js  local_dekt_signin.js  local_dekt_signin_loop.js  local_dekt_unenroll.js  local_env.js  local_sync_gist.js
(+22 files in other folders)
