[project]
name = "bit-quanx"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
backend = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "certifi>=2024.7.4",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pytest>=8.3.0",
]
gui = [
    "PySide6>=6.7.0",
    "httpx>=0.27.0",
    "certifi>=2024.7.4",
    "qrcode[pil]>=7.4.0",
    "pillow>=10.0.0",
]
